# LMDesk

./: .gitignore  build-windows.spec  build_config.json  bun.lockb  eslint.config.js  package.json  pyproject.toml  requirements.txt  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-pyloid/: build.py  database.py  main.py  pyloid_app.py  server.py
src-pyloid/api/: db_api.py  llm_api.py  window.py
src/components/: TitleBar.tsx  mode-toggle.tsx  theme-provider.tsx
src/lib/: api.ts
src/pages/: home.tsx  settings.tsx
